testdata/typechecker/ok/MainTest2.java
int main() {
        int a;
        a = 0;
	    printInt(a);
        printInt(a+1);
	    printInt(a*1);
    	return 0;
}
