testdata/typechecker/error/BinopTest-err5.java
int main() {
            int x;
            x = true - 283; // TE
		return 0;
}

